# Gemini-Chat

./: LICENSE  README.md  app.py  pyproject.toml  start.bat
geminichat/: __init__.py
geminichat/chat_history/: d39d8dbb-04d1-49eb-9b7a-c7cde06af044.json  folders.json
geminichat/config/: __init__.py  defaults.toml  secrets.py  settings_schema.py
geminichat/domain/: app_state.py  attachment.py  conversation.py  message.py  model_type.py  user_settings.py
geminichat/infrastructure/: __init__.py  config_repo.py  file_storage.py  folder_repo.py  history_repo.py
geminichat/infrastructure/network/: gemini_client_enhanced.py
scripts/: build_exe.ps1  build_exe.sh
services/: __init__.py  file_upload_service.py  folder_service.py  gemini_service_enhanced.py  history_service.py  persistency_manager.py  settings_service.py  startup_cleanup_service.py  startup_manager.py
ui/: __init__.py  chat_history_manager.py  chat_input.py  chat_tab.py  file_upload_widget.py  loading_state_manager.py  main_window_enhanced.py  ui_config.py  welcome_page.py
ui/dialogs/: __init__.py  url_collection_dialog.py
ui/theming/: __init__.py  color_utils.py  theme_creator.py  theme_editor.py  theme_gallery.py  theme_manager.py  theme_model.py  theme_schema.py  theme_switcher.py
